--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Encriptador de texto</title>
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="img/Logo.png" alt="Logo de Alura">
-    </header>
     <main>
+        <img class="logo" src="img/Logo.png" alt="Logo de Alura">
         <div class="container">
             <div class="encriptar">
                 <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
@@ -34,9 +32,6 @@
                     <h2 id="titulo-mensaje">Ningun mensaje encriptado</h2>
                     <p id="parrafo">Ingresa el texto que deseas encriptar o desencriptar</p>
                     <textarea class="mensaje" id="mensaje" name="mensaje" cols="30" rows="10"></textarea>
-                </div>
-                <div>
-                    <button class="btn-copiar">Copiar</button>
                 </div>
             </div>
         </div>
